video 1-4 and setup prettier and first few pages

--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -4,5 +4,15 @@
     "titleBar.inactiveForeground": "#000000CC",
     "titleBar.activeBackground": "#FFC600",
     "titleBar.inactiveBackground": "#FFC600CC"
+  },
+  // Enable per-language
+  "[javascript]": {
+    "editor.formatOnSave": true
+  },
+  "[javascriptreact]": {
+    "editor.formatOnSave": true
+  },
+  "files.associations": {
+    "*.js": "javascriptreact"
   }
 }
